@@ -5,3 +5,4 @@
 \.gitignore$
 ^.github$
 ^data-raw
+vignettes
