@@ -4,6 +4,8 @@ pop.predict.subnat can handle 1x1 subnational projections.
 
 Fix in 1x1 GQs.
 
+Change in the syntax of the LatestAgeMortalityPattern column in vwBaseYear dataset.
+
 10.0-0/1 (08/09/2023)
 ------
 Making default datasets from wpp2022 work with pop.predict.
